--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@
 *.stTheme.cache
 
 # Ignore build folders
-**/build
+**/build*
 
 # Workspace files are user-specific
 *.sublime-workspace
@@ -51,3 +51,5 @@
 
 # clangd
 .cache/
+
+android.bat
