ci: update build-geode-mod
Signed-off-by: rooot <hey@rooot.gay>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
-﻿name: Build Geode Mod
+name: Build Geode Mod
 
 on:
   workflow_dispatch:
   push:
     branches:
-    - "main"
+      - "**"
 
 jobs:
   build:
@@ -14,20 +14,29 @@ jobs:
         config:
         - name: Windows
           os: windows-latest
+
         - name: macOS
           os: macos-latest
 
-    name: Build ${{ matrix.config.name }}
+        - name: Android32
+          os: ubuntu-latest
+          target: Android32
+
+        - name: Android64
+          os: ubuntu-latest
+          target: Android64
+
+    name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Build
-      uses: geode-sdk/build-geode-mod@main
-      with:
-        sdk: nightly
-        combine: true
+      - name: Build the mod
+        uses: geode-sdk/build-geode-mod@main
+        with:
+          combine: true
+          target: ${{ matrix.config.target }}
 
   package:
     name: Package builds
@@ -35,12 +44,10 @@ jobs:
     needs: ['build']
 
     steps:
-    - name: Combine Builds
-      uses: geode-sdk/build-geode-mod@combine
-      id: build
+      - uses: geode-sdk/build-geode-mod/combine@main
+        id: build
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: Build Output
-        path: ${{ steps.build.outputs.build-output }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Build Output
+          path: ${{ steps.build.outputs.build-output }}
