--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,9 @@
 *.stTheme.cache
 
 # Ignore build folders
-**/build*
+**/build
+# Ignore platform specific build folders
+build-*/
 
 # Workspace files are user-specific
 *.sublime-workspace
@@ -52,4 +54,5 @@
 # clangd
 .cache/
 
-android.bat
+# Visual Studio
+.vs/
