--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,15 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "x86_64")
 
-project(MenuShaders VERSION 1.1.0)
+project(MenuShaders VERSION 1.2.0)
 
-file(GLOB SOURCES
-    src/*.cpp
+set(SOURCES
+    src/main.cpp
 )
+if(APPLE)
+    set(SOURCES ${SOURCES} src/retina.mm)
+    set_source_files_properties(src/retina.mm PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
+endif()
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
@@ -29,5 +33,5 @@ elseif(ANDROID)
     target_link_libraries(${PROJECT_NAME} GLESv2)
 endif()
 
-CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#3259bf6")
+CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#9725886")
 target_link_libraries(${PROJECT_NAME} ctre)
