--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           combine: true
           target: ${{ matrix.config.target }}
+          sdk: 'nightly'
 
   package:
     name: Package builds
