--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,14 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_OSX_ARCHITECTURES "x86_64")
+set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
-project(MenuShaders VERSION 1.2.0)
+project(MenuShaders VERSION 1.2.1)
 
-set(SOURCES
+add_library(${PROJECT_NAME} SHARED
     src/main.cpp
 )
-if(APPLE)
-    set(SOURCES ${SOURCES} src/retina.mm)
-    set_source_files_properties(src/retina.mm PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
-endif()
-
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
@@ -33,5 +28,5 @@ elseif(ANDROID)
     target_link_libraries(${PROJECT_NAME} GLESv2)
 endif()
 
-CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#9725886")
+CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#acb2f4d")
 target_link_libraries(${PROJECT_NAME} ctre)
