--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,16 @@ add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
 setup_geode_mod(${PROJECT_NAME})
 
-if(WIN32)
+if (GEODE_TARGET_PLATFORM STREQUAL "Win64")
     target_link_libraries(${PROJECT_NAME} opengl32)
-elseif(APPLE)
-    target_link_libraries(${PROJECT_NAME} "-framework OpenGL -framework Cocoa")
-elseif(ANDROID)
+elseif (GEODE_TARGET_PLATFORM STREQUAL "Android32")
     target_link_libraries(${PROJECT_NAME} GLESv2)
+elseif (GEODE_TARGET_PLATFORM STREQUAL "Android64")
+    target_link_libraries(${PROJECT_NAME} GLESv2)
+elseif (GEODE_TARGET_PLATFORM STREQUAL "MacOS")
+    target_link_libraries(${PROJECT_NAME} "-framework OpenGL -framework Cocoa")
+elseif (GEODE_TARGET_PLATFORM STREQUAL "iOS")
+    target_link_libraries(${PROJECT_NAME} "-framework OpenGLES -framework Cocoa")
 endif()
 
 CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#eb9577a")
